K8s/vault/vault-ui/vault-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vault-ui
  namespace: vault-system
  labels:
    app.kubernetes.io/name: vault-ui
    app.kubernetes.io/instance: vault-ui-demo
    app.kubernetes.io/component: ui
  annotations:
    description: 'HTTPRoute for Vault UI'
    contact: platform-team
    documentation: https://www.vaultproject.io/
spec:
  parentRefs:
    - name: idp-gateway
      namespace: kube-system
  hostnames:
    - "vault.127-0-0-1.sslip.io"
  rules:
    - backendRefs:
        - name: vault-ui
          port: 8200
